# braze-sync

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  biome.json  deny.toml  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
docs/: braze-api-reference.md  configuration.md  integration.md  orphan-tracking.md  registry-mode.md  roadmap.md  scope-boundaries.md
src/: error.rs  lib.rs  main.rs
src/braze/: catalog.rs  content_block.rs  custom_attribute.rs  email_template.rs  error.rs  mod.rs  rate_limit.rs
src/cli/: apply.rs  context.ts  diff.rs  export.rs  index.ts  init.rs  mod.rs  validate.rs
src/cli/commands/: apply.ts  diff.ts  export.ts  validate.ts
src/config/: mod.rs  schema.rs
src/core/: braze-client.ts  config.ts  diff-engine.ts  rate-limiter.ts
src/diff/: catalog.rs  content_block.rs  custom_attribute.rs  email_template.rs  mod.rs  orphan.rs
src/format/: fixtures.rs  json.rs  mod.rs  snapshot_tests.rs  table.rs
src/format/snapshots/: braze_sync__format__snapshot_tests__all_kinds_mixed_json.snap  braze_sync__format__snapshot_tests__all_kinds_mixed_table.snap  braze_sync__format__snapshot_tests__catalog_items_json.snap  braze_sync__format__snapshot_tests__catalog_items_table.snap  braze_sync__format__snapshot_tests__catalog_schema_field_diffs_json.snap  braze_sync__format__snapshot_tests__catalog_schema_field_diffs_table.snap  braze_sync__format__snapshot_tests__catalog_schema_unchanged_json.snap  braze_sync__format__snapshot_tests__catalog_schema_unchanged_table.snap  braze_sync__format__snapshot_tests__content_block_added_json.snap  braze_sync__format__snapshot_tests__content_block_added_table.snap  braze_sync__format__snapshot_tests__content_block_body_modified_json.snap  braze_sync__format__snapshot_tests__content_block_body_modified_table.snap  braze_sync__format__snapshot_tests__content_block_orphan_json.snap  braze_sync__format__snapshot_tests__content_block_orphan_table.snap  braze_sync__format__snapshot_tests__custom_attribute_unchanged_with_hint_json.snap  braze_sync__format__snapshot_tests__custom_attribute_unchanged_with_hint_table.snap  braze_sync__format__snapshot_tests__empty_json.snap  braze_sync__format__snapshot_tests__empty_table.snap
src/formatters/: table.ts
src/fs/: catalog_io.rs  content_block_io.rs  custom_attribute_io.rs  email_template_io.rs  frontmatter.rs  mod.rs
src/providers/: base.ts  catalog.ts  content-block.ts  utils.ts
src/resource/: catalog.rs  content_block.rs  custom_attribute.rs  email_template.rs  mod.rs
src/types/: braze-api.ts  config.ts  diff.ts  resource.ts
tests/: cli_apply.rs  cli_diff.rs  cli_export.rs  cli_init.rs  cli_validate.rs
tests/common/: mod.rs
tests/fixtures/catalogs/: cardiology.yaml
tests/fixtures/configs/: valid.yaml
tests/fixtures/content_blocks/: bonus_dialog.liquid
tests/fixtures/content_blocks_invalid_tags/: bad_tags.liquid
tests/unit/core/: braze-client.test.ts  config.test.ts  diff-engine.test.ts  rate-limiter.test.ts
tests/unit/providers/: catalog.test.ts  content-block.test.ts  utils.test.ts
