[package]
name = "braze-sync"
version = "0.8.0"
edition = "2021"
rust-version = "1.86"
license = "MIT"
description = "GitOps CLI for managing Braze configuration as code"
repository = "https://github.com/uny/braze-sync"
homepage = "https://github.com/uny/braze-sync"
keywords = ["braze", "gitops", "cli", "marketing", "devops"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "braze-sync"
path = "src/main.rs"

[lib]
name = "braze_sync"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time", "sync", "io-util"] }

# Concurrent stream combinators (buffer_unordered for parallel API fan-out)
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# HTTP — rustls only, no openssl
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `serde_norway` is the actively-maintained serde_yaml fork recommended by
# RUSTSEC-2025-0067 / RUSTSEC-2025-0068 after `serde_yml` / `libyml` were
# archived as unsound. API-compatible with the original `serde_yaml`.
serde_norway = "0.9"

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Jitter for 429 backoff. Tiny, zero-dep PRNG — the Braze client is the
# only caller and only needs U(0, N) for jitter.
fastrand = "2"

# File system
dotenvy = "0.15"

# CSV for catalog items error types (Phase B)
csv = "1"

# Hashing for catalog items diff
blake3 = "1"

# Text diff (Content Block body comparison, future Email Template parts)
similar = "2"

# Date formatting for `[ARCHIVED-YYYY-MM-DD]` orphan rename. `clock`
# gives us `Utc::now` and pulls `iana-time-zone` transitively — chrono's
# `clock` feature can't be narrowed to UTC-only, so that crate is in the
# tree even though we never touch `Local`. `default-features = false`
# still drops the `wasmbind` default (we don't target WASM).
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Misc
url = { version = "2", features = ["serde"] }

# Naming pattern validation (validate command). regex-lite is the
# lightweight cousin of `regex`: smaller binary, fewer deps, no Unicode
# tables. Sufficient for catalog/content-block/custom-attribute name
# patterns from IMPLEMENTATION.md §10.
regex-lite = "0.1"
secrecy = "0.10"

# Progress bar for batch catalog items apply
indicatif = "0.17"

[dev-dependencies]
insta = { version = "1", features = ["yaml", "json"] }
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
